--- a/index.html
+++ b/index.html
@@ -6,38 +6,88 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!--CSS Styles -->
-    <link rel="stylesheet" href="/style/normalize.css">
+    <link rel="stylesheet" href="/style/normalize.css" />
     <link rel="stylesheet" href="/style/utilities.css" />
-    <link rel="stylesheet" href="/style/index.css">
-    <link rel="stylesheet" href="/style/mobile.css">
+    <link rel="stylesheet" href="/style/index.css" />
+    <link rel="stylesheet" href="/style/mobile.css" />
 
     <!-- Animate CSS CDN -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+
+    <!-- icons -->
+
     <title>Adva Mozes | Fullstack Developer</title>
   </head>
 
   <body>
-
     <!-- Navbar -->
     <nav>
-        <h1>Adva Mozes</h1>
-        <ul class="navigation">
-          <li><a href="#aboutme" class="nav-link">About me</a></li>
-          <li><a href="#skills" class="nav-link">Skills</a></li>
-          <li><a href="#projects" class="nav-link">Projects</a></li>
-          <li><a href="#contact" class="nav-link">Contact me</a></li>
-        </ul>
-        <button class="burger-menu" id="burger-menu">
-          <ion-icon class="bars" name="menu-outline"></ion-icon>
-        </button>
-  </nav>
+      <h1>Adva Mozes</h1>
+      <ul class="navigation">
+        <li><a href="#aboutme" class="nav-link">About me</a></li>
+        <li><a href="#skills" class="nav-link">Skills</a></li>
+        <li><a href="#projects" class="nav-link">Projects</a></li>
+        <li><a href="#contact" class="nav-link">Contact me</a></li>
+      </ul>
+      <button class="burger-menu" id="burger-menu">
+        <ion-icon class="bars" name="menu-outline"></ion-icon>
+      </button>
+    </nav>
 
     <!-- Hero Section -->
+    <section class="hero" id="aboutme">
+      <img src="/photos/hero-photo.jpg" alt="hero" class="hero-img" />
+      <div class="bio">
+        <h2 class="bio-title">About me</h2>
+        <p class="bio-text">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia sed
+          dolorem fugit sapiente porro veniam pariatur dolore nostrum delectus
+          inventore tempore minus nemo, iste ullam illo laboriosam maiores
+          repudiandae quos!
+        </p>
+      </div>
+    </section>
 
     <!-- More about -->
+    <section class="more-about">
+      <h2>More About me</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
+        nesciunt excepturi quos obcaecati incidunt voluptatem ipsam sunt ipsum,
+        autem deleniti cupiditate molestias quis unde quae totam porro dicta
+        iure animi inventore, veniam hic! Omnis nulla, delectus a voluptatibus
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur
+        nostrum dolor minus, libero delectus praesentium perferendis
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero,
+        consequuntur labore? Ea totam voluptas amet!
+      </p>
+    </section>
 
     <!-- Skills section -->
+    <section class="skills" id="skills">
+      <h2 class="header-skills">Mis mejores habilidades</h2>
+
+      <div class="skills-box">
+        <div class="first-set">
+            <img src="/photos/icons8-css3.svg" alt="" loading="lazy" class="icon icon-card"/>
+            <img src="/photos/icons8-html-5.svg" alt="" loading="lazy" class="icon icon-card"/>
+            <img src="/photos/icons8-javascript.svg" alt="" loading="lazy" class="icon icon-card"/>
+        </div>
+
+        <div class="second-set">
+          <img src="/photos/icons8-git.svg" alt="" loading="lazy" class="icon icon-card"/>
+          <img src="/photos/icons8-react-native.svg" alt="" loading="lazy" class="icon icon-card"/>
+          <img src="/photos/icons8-python.svg" alt="" loading="lazy" class="icon icon-card"/>
+        </div>
+      </div>
+    </section>
 
     <!-- Projects section -->
 
@@ -46,6 +96,5 @@
     <!-- Social accounts - Fixed to the right -->
 
     <!-- Footer section -->
-
   </body>
 </html>
