--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     <!-- Skills section -->
     <section class="skills" id="skills">
-      <h2 class="header-skills">Mis mejores habilidades</h2>
+      <h2 class="header-skills">My Top Skills</h2>
 
       <div class="skills-box">
         <div class="first-set">
