projects section done

--- a/index.html
+++ b/index.html
@@ -90,6 +90,42 @@
     </section>
 
     <!-- Projects section -->
+    <section class="projects" id="projects">
+        <h2 class="projects-title">Some of my recent projects</h2>
+        <div class="projects-box">
+          <div class="project-box projects-card">
+            <img src="/photos/tesla-moc-preview.png" alt="tesla-clone" loading="lazy"class="projects-pic"/>
+            <h3 class="projects-title">Tesla clone</h3>
+            <p class="projects-details">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
+              ratione vel inventore labore commodi modi quos culpa aut saepe!
+              Alias!
+            </p>
+            <a href="#" target="_blank" class="projects-link">Check it Out</a>
+          </div>
+          <div class="project-box projects-card">
+            <img src="/photos/tesla-moc-preview.png" alt="tesla-clone" loading="lazy"class="projects-pic"/>
+            <h3 class="projects-title">Tesla clone</h3>
+            <p class="projects-details">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
+              ratione vel inventore labore commodi modi quos culpa aut saepe!
+              Alias!
+            </p>
+            <a href="#" target="_blank" class="projects-link">Check it Out</a>
+          </div>
+          <div class="project-box projects-card">
+            <img src="/photos/tesla-moc-preview.png" alt="tesla-clone" loading="lazy"class="projects-pic"/>
+            <h3 class="projects-title">Tesla clone</h3>
+            <p class="projects-details">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
+              ratione vel inventore labore commodi modi quos culpa aut saepe!
+              Alias!
+            </p>
+            <a href="#" target="_blank" class="projects-link">Check it Out</a>
+          </div>
+    
+        </div>
+      
 
     <!-- Contact section -->
 
