--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     <!-- Navbar -->
     <nav>
       <h1>Adva Mozes</h1>
-      <ul class="navigation">
+      <ul class="navigation" id="navigation">
         <li><a href="#aboutme" class="nav-link">About me</a></li>
         <li><a href="#skills" class="nav-link">Skills</a></li>
         <li><a href="#projects" class="nav-link">Projects</a></li>
         <li><a href="#contact" class="nav-link">Contact me</a></li>
       </ul>
       <button class="burger-menu" id="burger-menu">
-        <ion-icon class="bars" name="menu-outline"></ion-icon>
+        <ion-icon class="bars" name="menu-outline"><a href="#navigation">m</a></ion-icon>
       </button>
     </nav>
 
@@ -127,7 +127,6 @@
         </div>
         </section>
       
-
     <!-- Contact section -->
     <section class="contact" id="contact">
       <h2>Stay in touch with me</h2>
@@ -180,8 +179,15 @@
     </section>
 
     <!-- Social accounts - Fixed to the right -->
+    <div class="socials">
+      <a href="#" target="_blank"><img src="/photos/icons8-twitter-circled.gif" alt="Twitter" loading="lazy" class="socicon"/></a>
+      <a href="#" target="_blank"><img src="/photos/side-icons8-instagram.gif" alt="Instagram" loading="lazy" class="socicon"/></a>
+      <a href="#" target="_blank"><img src="/photos/side-icons8-linkedin-circled.gif" alt="Linkedin" loading="lazy" class="socicon"/></a>
+      <a href="#" target="_blank"><img src="/photos/side-icons8-github.gif" alt="Github" loading="lazy" class="socicon"/></a>
+    </div>
     
-    <!-- Footer section -->
+    <!-- arrow up -->
+      <a href="/index.html"><img src="/photos/icons8-arrow-up-58.png" alt="arrow-up" class="arrow-up" loading="lazy"></a>
 
   </body>
 </html>
