--- a/index.html
+++ b/index.html
@@ -76,15 +76,15 @@
 
       <div class="skills-box">
         <div class="first-set">
-            <img src="/photos/icons8-css3.svg" alt="" loading="lazy" class="icon icon-card"/>
-            <img src="/photos/icons8-html-5.svg" alt="" loading="lazy" class="icon icon-card"/>
-            <img src="/photos/icons8-javascript.svg" alt="" loading="lazy" class="icon icon-card"/>
+          <div class="tooltip"><img src="/photos/icons8-css3.svg" alt="" loading="lazy" class="icon icon-card"/><span class="tooltiptext">CSS</span></div>
+          <div class="tooltip"><img src="/photos/icons8-html-5.svg" alt="" loading="lazy" class="icon icon-card"/><span class="tooltiptext">HTML</span></div>
+          <div class="tooltip"><img src="/photos/icons8-javascript.svg" alt="" loading="lazy" class="icon icon-card"/><span class="tooltiptext">JavaScript</span></div>
         </div>
 
         <div class="second-set">
-          <img src="/photos/icons8-git.svg" alt="" loading="lazy" class="icon icon-card"/>
-          <img src="/photos/icons8-react-native.svg" alt="" loading="lazy" class="icon icon-card"/>
-          <img src="/photos/icons8-python.svg" alt="" loading="lazy" class="icon icon-card"/>
+          <div class="tooltip"><img src="/photos/icons8-git.svg" alt="" loading="lazy" class="icon icon-card"/><span class="tooltiptext">Git</span></div>
+          <div class="tooltip"><img src="/photos/icons8-react-native.svg" alt="" loading="lazy" class="icon icon-card"/><span class="tooltiptext">React</span></div>
+          <div class="tooltip"><img src="/photos/icons8-python.svg" alt="" loading="lazy" class="icon icon-card"/><span class="tooltiptext">Python</span></div>
         </div>
       </div>
     </section>
