re-styling hero section

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <!-- Hero Section -->
     <section class="hero" id="aboutme">
-      <img src="/photos/hero-photo.jpg" alt="hero" class="hero-img" />
+      <img src="/photos/new-hero-pic.jpg" alt="hero" class="hero-img" />
       <div class="bio">
         <h2 class="bio-title">About me</h2>
         <p class="bio-text">
