--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero,
           consequuntur labore? Ea totam voluptas amet!
         </p>
+        <div class="cv-btn"> <a href="#">Download my CV</a></div>
       </div>
     </section>
 
