--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/style/utilities.css" />
     <link rel="stylesheet" href="/style/index.css" />
     <link rel="stylesheet" href="/style/hmburger.css">
+    <link rel="stylesheet" href="/style/hero-animation.css">
     <link rel="stylesheet" href="/style/mobile.css" />
 
     <!-- Animate CSS CDN -->
@@ -56,14 +57,14 @@
 
     <!-- Hero Section -->
     <section class="hero" id="aboutme">
-      <img src="/photos/new-hero-pic.jpg" alt="hero" class="hero-img" />
-      <div class="bio">
-        <h2 class="bio-title">About me</h2>
+      <img src="/photos/hero-cartoon.png" alt="hero" class="hero-img" />
+      <div class="bio typewriter">
+        <h2 class="bio-title">Hey guys!  :)</h2>
+        <br>
         <p class="bio-text">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia sed
           dolorem fugit sapiente porro veniam pariatur dolore nostrum delectus
-          inventore tempore minus nemo, iste ullam illo laboriosam maiores
-          repudiandae quos!
+          inventore tempore minus nemo!
         </p>
       </div>
     </section>
