projects section adjustments

--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
 
     <!--CSS Styles -->
     <link rel="stylesheet" href="/style/normalize.css" />
-    <!-- <link rel="stylesheet" href="/style/hmburger.css"> -->
     <link rel="stylesheet" href="/style/utilities.css" />
     <link rel="stylesheet" href="/style/index.css" />
-    <link rel="stylesheet" href="/style/hmburger.css">
-    <link rel="stylesheet" href="/style/hero-animation.css">
+    <link rel="stylesheet" href="/style/hmburger.css" />
+    <link rel="stylesheet" href="/style/hero-animation.css" />
     <link rel="stylesheet" href="/style/mobile.css" />
 
     <!-- Animate CSS CDN -->
@@ -29,7 +28,6 @@
     <!-- Navbar -->
     <nav>
       <h2>Adva Mozes</h2>
-      </h3>
       <ul class="navigation" id="navigation">
         <li><a href="#aboutme" class="nav-link">About me</a></li>
         <li><a href="#skills" class="nav-link">Skills</a></li>
@@ -37,7 +35,7 @@
         <li><a href="#contact" class="nav-link">Contact me</a></li>
       </ul>
       <div class="menu-wrap">
-        <input type="checkbox" class="toggler">
+        <input type="checkbox" class="toggler" />
         <div class="hamburger"><div></div></div>
         <div class="menu">
           <div>
@@ -52,19 +50,18 @@
           </div>
         </div>
       </div>
-   
-    </nav> 
+    </nav>
 
     <!-- Hero Section -->
     <section class="hero" id="aboutme">
       <img src="/photos/hero-cartoon.png" alt="hero" class="hero-img" />
       <div class="bio typewriter">
-        <h2 class="bio-title">Hey guys!  :)</h2>
-        <br>
+        <h2 class="bio-title">Hi There :)</h2>
+        <br />
         <p class="bio-text">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia sed
-          dolorem fugit sapiente porro veniam pariatur dolore nostrum delectus
-          inventore tempore minus nemo!
+          My name is Adva and I'm on my way to become a<br />
+          <span class="bold"> software developer </span><br />
+          checkout my progress!
         </p>
       </div>
     </section>
@@ -84,11 +81,7 @@
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur
           nostrum dolor minus, libero delectus praesentium perferendis
         </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero,
-          consequuntur labore? Ea totam voluptas amet!
-        </p>
-        <div class="cv-btn"> <a href="#">Download my CV</a></div>
+        <div class="cv-btn"><a href="#">Download my CV</a></div>
       </div>
     </section>
 
@@ -159,47 +152,40 @@
       <div class="projects-box">
         <div class="project-box projects-card">
           <img
-            src="/photos/tesla-moc-preview.png"
+            src="/photos/tesla clone.png"
             alt="tesla-clone"
             loading="lazy"
             class="projects-pic"
           />
           <h3 class="projects-title">Tesla clone</h3>
           <p class="projects-details">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
-            ratione vel inventore labore commodi modi quos culpa aut saepe!
-            Alias!
+            cool clone project i did 2 weeks after diving into HTML & CSS
           </p>
           <a href="#" target="_blank" class="projects-link">Check it Out</a>
         </div>
         <div class="project-box projects-card">
           <img
-            src="/photos/tesla-moc-preview.png"
-            alt="tesla-clone"
+            src="/photos/spaceships battle.png"
+            alt="battle"
             loading="lazy"
             class="projects-pic"
           />
-          <h3 class="projects-title">Tesla clone</h3>
+          <h3 class="projects-title">Spaceships battle Game</h3>
           <p class="projects-details">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
-            ratione vel inventore labore commodi modi quos culpa aut saepe!
-            Alias!
+            my first Python game i wrote for my son to keep him busy while im
+            coding
           </p>
           <a href="#" target="_blank" class="projects-link">Check it Out</a>
         </div>
         <div class="project-box projects-card">
           <img
-            src="/photos/tesla-moc-preview.png"
+            src="/photos/dropox eror-pagr.png"
             alt="tesla-clone"
             loading="lazy"
             class="projects-pic"
           />
-          <h3 class="projects-title">Tesla clone</h3>
-          <p class="projects-details">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
-            ratione vel inventore labore commodi modi quos culpa aut saepe!
-            Alias!
-          </p>
+          <h3 class="projects-title">DropBox Error page</h3>
+          <p class="projects-details">my first project ever using html & css</p>
           <a href="#" target="_blank" class="projects-link">Check it Out</a>
         </div>
       </div>
