--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
           />
           <h3 class="projects-title">Tesla clone</h3>
           <p class="projects-details">
-            cool clone project i did 2 weeks after diving into HTML & CSS
+            cool clone project i did after 2 weeks diving into HTML & CSS
           </p>
-          <a href="#" target="_blank" class="projects-link">Check it Out</a>
+          <a href="#" target="_blank" class="projects-link">Check it Out!</a>
         </div>
         <div class="project-box projects-card">
           <img
@@ -175,7 +175,7 @@
             my first Python game i wrote for my son to keep him busy while im
             coding
           </p>
-          <a href="#" target="_blank" class="projects-link">Check it Out</a>
+          <a href="#" target="_blank" class="projects-link">Check it Out!</a>
         </div>
         <div class="project-box projects-card">
           <img
@@ -186,7 +186,7 @@
           />
           <h3 class="projects-title">DropBox Error page</h3>
           <p class="projects-details">my first project ever using html & css</p>
-          <a href="#" target="_blank" class="projects-link">Check it Out</a>
+          <a href="#" target="_blank" class="projects-link">Check it Out!</a>
         </div>
       </div>
     </section>
